--- a/assets/styles/frontend/common/components/box/detail.less
+++ b/assets/styles/frontend/common/components/box/detail.less
@@ -275,6 +275,11 @@
         text-align: center;
         justify-content: center;
 
+        &--variant {
+            margin-top: 0;
+            width: auto;
+        }
+
         &__icon {
             margin-right: 10px;
 
