--- a/assets/styles/frontend/common/main-product.less
+++ b/assets/styles/frontend/common/main-product.less
@@ -30,6 +30,9 @@
 @import "components/list/set.less";
 @import "components/list/simple.less";
 
+//// window
+@import "components/window/watch-dog.less";
+
 //// box
 @import "components/box/articles.less";
 @import "components/box/popup-add.less";
