--- a/assets/styles/frontend/common/components/in/stickers.less
+++ b/assets/styles/frontend/common/components/in/stickers.less
@@ -7,12 +7,28 @@
     margin-left: -@in-stickers-item-gap;
 
     &__item {
+        display: flex;
+        justify-content: center;
+        align-items: center;
         height: 70px;
-        margin-left: @in-stickers-item-gap;
+        width: @calc-base / 3;
+        padding-left: @in-stickers-item-gap;
         margin-bottom: @in-stickers-item-gap;
 
         @media @query-md {
             height: 100px;
+        }
+
+        @media @query-vl {
+            width: 100% / 4;
+        }
+
+        picture {
+            display: flex;
+        }
+
+        img {
+            max-height: 100%;
         }
     }
 }
