[TF-1064] Adding previous and next button

--- a/assets/styles/frontend/common/main-category.less
+++ b/assets/styles/frontend/common/main-category.less
@@ -31,3 +31,4 @@
 @import "components/box/products-set.less";
 @import "components/box/popup-add.less";
 @import "components/box/search.less";
+@import "components/box/button.less";
