--- a/templates/Front/Content/Product/productsWithControls.html.twig
+++ b/templates/Front/Content/Product/productsWithControls.html.twig
@@ -25,11 +25,16 @@
         {% if paginationResult.results|length > 0 %}
             {{ productList.list(paginationResult.results) }}
 
-            <div class="box-list__actions">
-                <div class="box-list__actions__button">
-                    {{ paginator.loadMoreButton(paginationResult) }}
-                </div>
-
+            {% if app.request.attributes.get('_route') is same as ('front_product_list') %}
+                <div class="box-button">
+                    {{ paginator.loadPreviousButton(paginationResult, 'page') }}
+                    {{ paginator.loadNextButton(paginationResult, 'page') }}
+                </div> 
+            {% else %}
+            <div class="box-list__actions__button">
+                {{ paginator.loadMoreButton(paginationResult) }}
+            </div>
+            {% endif %}
                 <div class="box-list__actions__pagination">
                     {% set entityName = 'products'|trans %}
                     {% if paging is not defined %}
@@ -37,7 +42,6 @@
                     {% endif %}
                     {{ paginator.paginatorNavigation(paginationResult, entityName, 'page', false, paging) }}
                 </div>
-            </div>
         {% endif %}
     </div>
 
