--- a/templates/Front/Layout/footer.html.twig
+++ b/templates/Front/Layout/footer.html.twig
@@ -110,7 +110,7 @@
                             </div>
                             <div class="footer-middle__awards__right">
                                 <div class="footer-middle__awards__heureka">
-                                    <a href="https://obchody.heureka.cz/tropicliberec-cz/recenze/" target="_blank" title="Heureka.cz - ověřené hodnocení obchodu TROPIC LIBEREC s.r.o.">
+                                    <a href="{{ getHeurekaReviewsUrl() }}" target="_blank" title="Heureka.cz - ověřené hodnocení obchodu TROPIC LIBEREC s.r.o.">
                                         <img src="https://im9.cz/cb/19416-11.png" height="130" width="340" alt="Heureka.cz - ověřené hodnocení obchodu TROPIC LIBEREC s.r.o." style="border: 0;">
                                     </a>
                                 </div>
