--- a/assets/styles/frontend/common/main-order.less
+++ b/assets/styles/frontend/common/main-order.less
@@ -10,6 +10,7 @@
 @import "components/in/opener.less";
 
 //// list
+@import "components/list/addresses.less";
 @import "components/list/cart-preview.less";
 @import "components/list/pickup-place.less";
 
