--- a/templates/Front/Content/Registration/resetPassword.html.twig
+++ b/templates/Front/Content/Registration/resetPassword.html.twig
@@ -19,12 +19,12 @@
                 {{ form_errors(form) }}
 
                 {{ form_start(form) }}
-                    <div class="wrap-article__row">
+                    <div class="wrap-article__row wrap-article__row--center">
                         <div class="wrap-article__row__half">
                             {{ form_row(form.email, { label: 'E-mail'|trans, errors_attr: { class: 'form-error--under' } }) }}
                         </div>
-                        <div class="wrap-article__row__half">
-                            {{ form_widget(form.submit, { label: 'Reset password'|trans, attr: {class: 'btn btn--success'} }) }}
+                        <div class="padding-left-10">
+                            {{ form_widget(form.submit, { label: 'Reset password'|trans, attr: {class: 'btn--with-input btn--success'} }) }}
                         </div>
                     </div>
                 {{ form_end(form) }}
