[TF-609] add new favicons

--- a/templates/Front/Layout/base.html.twig
+++ b/templates/Front/Layout/base.html.twig
@@ -33,12 +33,12 @@
         <link rel="icon" type="image/png" sizes="32x32" href="{{ asset('public/frontend/images/favicons/favicon-32x32.png') }}">
         <link rel="icon" type="image/png" sizes="16x16" href="{{ asset('public/frontend/images/favicons/favicon-16x16.png') }}">
         <link rel="manifest" href="{{ asset('public/frontend/images/favicons/site.webmanifest') }}">
-        <link rel="mask-icon" href="{{ asset('public/frontend/images/favicons/safari-pinned-tab.svg') }}" color="#e79c00">
+        <link rel="mask-icon" href="{{ asset('public/frontend/images/favicons/safari-pinned-tab.svg') }}" color="#0077b3">
         <link rel="shortcut icon" href="{{ asset('public/frontend/images/favicons/favicon.ico') }}">
-        <meta name="msapplication-TileColor" content="#e79c00">
+        <meta name="msapplication-TileColor" content="#0077b3">
         <meta name="msapplication-TileImage" content="{{ asset('public/frontend/images/favicons/mstile-144x144.png') }}">
         <meta name="msapplication-config" content="{{ asset('public/frontend/images/favicons/browserconfig.xml') }}">
-        <meta name="theme-color" content="#e79c00">
+        <meta name="theme-color" content="#0077b3">
 
         <title>{% block title %}{{ 'Shopsys Commerce Cloud'|trans }}{% endblock %} {{ getSeoTitleAddOn() }}</title>
     </head>
