[TF-1143] fix cart item and order item displayed availability

--- a/templates/Front/Content/Order/preview.html.twig
+++ b/templates/Front/Content/Order/preview.html.twig
@@ -33,7 +33,7 @@
         <div class="list-cart-preview__item__info">
             {% if canShowAvailability is same as (true) %}
                 <div class="list-cart-preview__item__availability">
-                    {{ availability.productAvailability(product, quantity) }}
+                    {{ availability.productAvailability(product, quantity, saleItem) }}
                 </div>
             {% endif %}
             <div class="list-cart-preview__item__pieces">
