--- a/templates/Front/Content/Cart/index.html.twig
+++ b/templates/Front/Content/Cart/index.html.twig
@@ -98,7 +98,7 @@
                                                 <i class="svg svg-remove"></i>
                                             </a>
                                             <div class="table-cart__cell table-cart__cell--availability">
-                                                {{ productAvailability.productAvailability(cartItem.product, cartItem.quantity) }}
+                                                {{ productAvailability.productAvailability(cartItem.product, cartItem.quantity, cartItem.saleItem) }}
                                             </div>
                                             <div class="table-cart__cell table-cart__cell--price-unit">
                                                 {{ cartItemPrice.unitPrice.priceWithVat|price }}
@@ -157,7 +157,7 @@
                                         <div class="table-cart__messages">
                                             <div class="table-cart__messages__left">
                                                 <div class="table-cart__messages__item table-cart__messages__item--left">
-                                                    {% if cartItem.product.isAvailableInDays(true) and not cartItem.saleItem %}
+                                                    {% if cartItem.isExtendedDelivery %}
                                                         <div class="in-message in-message--without-gap in-message--warning">
                                                             {{ 'Tento produkt prodlouží dodání celé objednávky'|trans }}
                                                         </div>
