--- a/assets/styles/frontend/common/components/box/order-type.less
+++ b/assets/styles/frontend/common/components/box/order-type.less
@@ -3,9 +3,10 @@
 .box-order-type {
     display: flex;
     flex-direction: row;
+    margin-bottom: 9px;
 
-    @media @query-vl {
-        margin-bottom: 25px;
+    @media @query-md {
+        margin-bottom: 6px;
     }
 
     &__list {
