--- a/templates/Front/Inline/Product/productFlagsMacro.html.twig
+++ b/templates/Front/Inline/Product/productFlagsMacro.html.twig
@@ -1,19 +1,26 @@
 {% macro list(productFlags, classAddition, onlyFirst, sellingPrice, variantsCount) %}
+    {% set processedFlags = 0 %}
+
     {% if productFlags|length > 0 or (sellingPrice is not null and sellingPrice.hasHigherStandardPrice) or variantsCount > 0 %}
         <div class="in-flag dont-print {{ classAddition }}">
             {% for productFlag in productFlags %}
-                {% if productFlag.pohodaId != 'Doporucujeme' and ((onlyFirst and loop.first) or not onlyFirst) %}
+                {% if productFlag.pohodaId != 'Doporucujeme' and ((onlyFirst and processedFlags < 1) or not onlyFirst) %}
                     {{ _self.detail(productFlag.name, productFlag.rgbColor) }}
+                    {% set processedFlags = processedFlags + 1 %}
                 {% endif %}
             {% endfor %}
             
-            {% if not onlyFirst %}
+            {% if not onlyFirst or (onlyFirst and processedFlags < 1) %}
                 {% if variantsCount > 0 %}
                     {{ _self.detail('Počet variant'|transchoice(variantsCount, {'%variantsCount%': variantsCount}), '#00aed8') }}
+                    {% set processedFlags = processedFlags + 1 %}
                 {% endif %}
-                
+            {% endif %}
+
+            {% if not onlyFirst or (onlyFirst and processedFlags < 1) %}
                 {% if sellingPrice.hasHigherStandardPrice %}
                     {{ _self.detail('%discountValue%% sleva'|trans({'%discountValue%': sellingPrice.pricePercentageDifference}), '#d53030') }}
+                    {% set processedFlags = processedFlags + 1 %}
                 {% endif %}
             {% endif %}
         </div>
