--- a/assets/styles/frontend/common/components/list/products-slider.less
+++ b/assets/styles/frontend/common/components/list/products-slider.less
@@ -27,7 +27,7 @@
 
     &.list-products-slider--with-button {
         .slick-list {
-            padding: 40px (@list-products-slider-item-gap - 10px) @list-products-slider-button-height 0;
+            padding: 40px (@list-products-slider-item-gap - 10px) 20px 0;
 
             @media @query-lg {
                 padding: 40px @list-products-slider-item-gap (30px + @list-products-slider-button-height) 0;
