--- a/assets/styles/frontend/common/main-product.less
+++ b/assets/styles/frontend/common/main-product.less
@@ -22,6 +22,7 @@
 @import "components/list/articles.less";
 @import "components/list/tags.less";
 @import "components/list/tags-secondary.less";
+@import "components/list/products.less";
 @import "components/list/products-set.less";
 @import "components/list/params.less";
 @import "components/list/last-visited.less";
