--- a/assets/styles/frontend/common/components/list/articles.less
+++ b/assets/styles/frontend/common/components/list/articles.less
@@ -72,10 +72,14 @@
 
         &__image {
             width: 100%;
-            text-align: center;
+            text-align: left;
             margin-bottom: 10px;
 
             font-size: 0;
+
+            @media @query-lg {
+                text-align: center;
+            }
 
             @media @query-xl {
                 width: @list-articles-item-image-width;
