--- a/assets/styles/frontend/common/components/list/grid-images.less
+++ b/assets/styles/frontend/common/components/list/grid-images.less
@@ -28,9 +28,17 @@
             position: relative;
             display: block;
             height: 0;
-            padding-bottom: 75%;
+            padding-bottom: 74.197%;
 
             font-size: 0;
+
+            @media @query-sm {
+                padding-bottom: 320px;
+            }
+
+            @media @query-md {
+                padding-bottom: 75%;
+            }
 
             img {
                 .center-image()
@@ -38,6 +46,7 @@
         }
 
         &__item {
+            width: 100%;
             margin-bottom: @grid-images-item-gap-small;
             margin-left: @grid-images-item-gap-small;
 
