--- a/templates/Front/Content/Product/boxTabs.html.twig
+++ b/templates/Front/Content/Product/boxTabs.html.twig
@@ -27,13 +27,13 @@
             <div class="in-tab__content">
                 <div class="in-tab__content__left">
                     {% if product.getDescription(domain.id) %}
-                        <div class="in-tab__content__title js-tabs-button active" data-tab-id="description">
+                        <div class="in-tab__content__title js-tabs-button" data-tab-id="description">
                             <a href="#" class="in-tab__content__title__link">
                                 {{ descriptionHeadline }}
                             </a>
                             <i class="svg svg-triangle"></i>
                         </div>
-                        <div class="in-tab__content__item in-tab__content__item--without-gap js-tabs-content active" data-tab-id="description">
+                        <div class="in-tab__content__item in-tab__content__item--without-gap js-tabs-content" data-tab-id="description">
                             {% if product.supplierSet is same as(false) %}
                                 <p class="in-tab__content__item__text">{{ product.getShortDescription(domain.id)|raw }}</p>
                             {% endif %}
@@ -55,14 +55,14 @@
                 <div class="in-tab__content__right">
                     {% if productParameterValues > 0 and not product.isMainVariant %}
 
-                        <div class="in-tab__content__title js-tabs-button active" data-tab-id="parameters">
+                        <div class="in-tab__content__title js-tabs-button" data-tab-id="parameters">
                             <a href="#" class="in-tab__content__title__link">
                                 {{ parametersHeadline }}
                             </a>
                             <i class="svg svg-triangle"></i>
                         </div>
 
-                        <div class="in-tab__content__item js-tabs-content active" data-tab-id="parameters">
+                        <div class="in-tab__content__item js-tabs-content" data-tab-id="parameters">
                             <div class="in-tab__content__item__block">
                                 <div class="wrap-gradient">
                                     <div class="wrap-gradient__in">
@@ -128,13 +128,13 @@
                 <div class="in-tab__content__bottom">
                     {% if youtubeVideoIds %}
                         <div id="video">
-                            <div class="in-tab__content__title js-tabs-button active" data-tab-id="videos">
+                            <div class="in-tab__content__title js-tabs-button" data-tab-id="videos">
                                 <a href="#" class="in-tab__content__title__link">
                                     {{ videosHeadline }}
                                 </a>
                                 <i class="svg svg-triangle"></i>
                             </div>
-                            <div class="in-tab__content__item js-tabs-content active" data-tab-id="videos">
+                            <div class="in-tab__content__item js-tabs-content" data-tab-id="videos">
                                 <div class="in-user-text" itemprop="videos">
                                     <h3 class="in-user-text__title">
                                         {{ videosHeadline }}
