--- a/templates/Front/Content/Order/sent.html.twig
+++ b/templates/Front/Content/Order/sent.html.twig
@@ -55,10 +55,12 @@
         </div>
     </div>
 
-    <div class="web__line">
-        <div class="web__container">
-            {% include 'Front/Content/Heureka/reviews.html.twig' with { reviews: heurekaReviews } %}
+    {% if heurekaReviews|length > 0 %}
+        <div class="web__line">
+            <div class="web__container">
+                {% include 'Front/Content/Heureka/reviews.html.twig' with { reviews: heurekaReviews } %}
+            </div>
         </div>
-    </div>
+    {% endif %}
 
 {% endblock %}
