design: add scrol to position for show more variants button

--- a/templates/Front/Content/Product/boxDetail.html.twig
+++ b/templates/Front/Content/Product/boxDetail.html.twig
@@ -9,7 +9,7 @@
     {% set domain = getDomain() %}
     {% set showGalleryMaxCount = 3 %}
     {% set showFlagsMaxCount = 3 %}
-    {% set maxVisibleVariants = 3 %}
+    {% set maxVisibleVariants = 1 %}
     {% set typeSet = product.pohodaProductType is same as(5) %}
     {% set typeSupplierSet = product.supplierSet is same as(true) %}
     {% set typeSetOrSupplierSet = typeSet or typeSupplierSet %}
@@ -137,7 +137,8 @@
                                     <ul {% if getProductSellingPrice(product) is not null %}itemprop="offers"
                                         itemscope
                                         itemtype="http://schema.org/AggregateOffer" {% endif %}
-                                        class="list-variants">
+                                        class="list-variants"
+                                        id="list-variants">
                                         {% for variant in filterOnlyVisibleVariants(product) %}
                                             {{ loop.index0 == maxVisibleVariants ? '<div class="display-none" id="listVariantsHidden">' : '' }}
                                             <li class="list-variants__item">
@@ -217,7 +218,10 @@
 
                                     {% if filterOnlyVisibleVariants(product)|length > maxVisibleVariants %}
                                         <div class="box-detail-add__show-more">
-                                            <a class="box-detail-add__show-more__button btn btn--big js-responsive-toggle" data-element="listVariantsHidden">
+                                            <a class="box-detail-add__show-more__button btn btn--big js-responsive-toggle js-scroll-to-position" 
+                                                href="#list-variants" 
+                                                data-space-above-position="60" 
+                                                data-element="listVariantsHidden">
                                                 <span class="box-detail-add__show-more__button__more">
                                                     {{ 'Načíst dalších'|trans }} {{ filterOnlyVisibleVariants(product)|length - maxVisibleVariants }} {{ 'variant'|trans }}
                                                 </span>
