design: hide button on the products set in the mobile version

--- a/assets/styles/frontend/common/components/box/products-set.less
+++ b/assets/styles/frontend/common/components/box/products-set.less
@@ -123,7 +123,10 @@
         }
 
         &__button {
+            display: none;
+
             @media @query-lg {
+                display: block;
                 margin-top: auto;
             }
         }
